--- a/Encrypt_style.css
+++ b/Encrypt_style.css
@@ -33,6 +33,10 @@ gap: 14px
 
 }
 
+h6 {
+    font-family: 'Quicksand', sans-serif;
+}
+
 .grid-item1{
 display: flex;
 justify-content: center;
@@ -43,7 +47,6 @@ grid-column: span 2 ;
 .grid-item2{
 /* background-color: rgb(189, 19, 141); */
 grid-row: span 1;
-
 
 
 }
@@ -57,28 +60,33 @@ grid-column: span 1;
 
 .textarea1 {
 border: none;
-background-color: none;
+background-color: #e8e8e8;
     width: 100%;
-    height: 500px;
+    height: 439px;
     margin:  0 0 12px 0 ;
     padding: 8px 0;
     border-radius: 8px;
    /* box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.15);*/
-    text-align: center;
+
     font-size: 24px;
     font-family: 'Quicksand', sans-serif;
-   
-
-
 }
+
+.textarea1:focus {
+    outline: none;
+}
+
 .grid-item3{
    
   
     }
 
 .textarea2 {
-    border: none;
+        border: none;
         width: 100%;
+        background-image: url(c18204699988879836cf630cac112d37e6cf933f.png);
+        background-repeat: no-repeat;
+        background-position: 50% 10%;
         height: 500px;
         margin:  0 0 12px 0 ;
         padding: 8px 0;
@@ -89,8 +97,13 @@ background-color: none;
         font-family: 'Quicksand', sans-serif;
     }
     
+::placeholder {
+    color: rgba(1, 56, 133, 0.754);
+}
 
-
+.textarea2:focus {
+    outline: none;
+}
     .buttons{
         display: inline-block;
     background-color: antiquewhite;   
