--- a/Encrypt_style.css
+++ b/Encrypt_style.css
@@ -53,6 +53,7 @@ grid-row: span 1;
 
 .grid-item3{
 /* background-color: rgb(223, 255, 127); */
+
 grid-column: span 1;
 
 
@@ -76,10 +77,6 @@ background-color: #e8e8e8;
     outline: none;
 }
 
-.grid-item3{
-   
-  
-    }
 
 .textarea2 {
         border: none;
@@ -87,7 +84,8 @@ background-color: #e8e8e8;
         background-image: url(c18204699988879836cf630cac112d37e6cf933f.png);
         background-repeat: no-repeat;
         background-position: 50% 10%;
-        height: 500px;
+        background-color: rgb(55, 115, 150);
+        height: 503px;
         margin:  0 0 12px 0 ;
         padding: 8px 0;
         border-radius: 8px;
@@ -127,7 +125,6 @@ height: max-content }
             padding: 18px 0px;
             width: 40%;
             margin: auto 0 ;
-
             border: solid #131313 1px ;
             border-radius: 8px;
             font-size: 16px;
@@ -136,7 +133,18 @@ height: max-content }
             background-color: rgb(47, 176, 246);
             }
         
-    
+            .botoncopiar {
+                padding: 18px 0px;
+                width: 100%;
+                margin: auto 0 ;
+                border: solid #131313 1px ;
+                border-radius: 8px;
+                font-size: 16px;
+                font-family: 'Quicksand', sans-serif;
+                border: none;
+                background-color: rgb(55, 115, 150);
+                color: rgb(255, 255, 255);
+                }
 
 
 input {
@@ -270,12 +278,20 @@ input {
             
             .textarea2 {
                 border: none;
-                    width: 100%;
-                    height: 150px;
-                    margin:  0 0 12px 0 ;
-                    padding: 8px 0;
-                    border-radius: 8px;
-                }
+                width: 100%;
+                background-image: url(c18204699988879836cf630cac112d37e6cf933f.png);
+                background-repeat: no-repeat;
+                background-position: 50% -130%;
+                background-size: 50%;
+                height: 150px;
+                margin:  0 0 12px 0 ;
+                padding: 8px 0;
+                border-radius: 8px;
+                /* box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.15);*/
+                text-align: center;
+                font-size: 24px;
+                font-family: 'Quicksand', sans-serif;
+            }
                 
                 input {
                     padding: 18px 0px;
